--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,61 @@
 [project]
 name = "mfik"
 version = "0.1.0"
-description = "Add your description here"
+description = "MeanFlow Inverse Kinematics - Neural network based IK solver using flow matching"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "numpy>=2.3.5",
-    "onnx>=1.19.1",
-    "onnxscript>=0.5.6",
-    "torch>=2.9.1",
+    # Core ML
+    "torch>=2.0.0",
+    "numpy>=1.24.0",
+    
+    # ONNX export
+    "onnx>=1.14.0",
+    "onnxscript>=0.1.0",
+    
+    # URDF parsing and robot models
+    "networkx>=3.0",
+    "lxml>=4.9.0",
+    "trimesh>=4.0.0",
+    "pillow>=10.0.0",
+    "six>=1.16.0",
+    
+    # Visualization and evaluation
+    "matplotlib>=3.7.0",
+    
+    # Training utilities
+    "tqdm>=4.65.0",
 ]
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=7.0.0",
+    "pytest-cov>=4.0.0",
+    "black>=23.0.0",
+    "ruff>=0.1.0",
+]
+
+[project.scripts]
+mfik = "main:main"
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["mfik"]
+
+[tool.ruff]
+line-length = 100
+target-version = "py312"
+
+[tool.ruff.lint]
+select = ["E", "F", "W", "I"]
+ignore = ["E501"]
+
+[tool.black]
+line-length = 100
+target-version = ["py312"]
+
+[tool.uv]
+index-url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
